@@ -1,3 +1,11 @@
+2001-11-17  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b8)
+
+	* [SECURITY] Fixed a bug where a bad guy could craft a url to index.php
+	  that would allow remote file reading.  Thanks to Cabezon Aurelien for
+	  finding the flaw.
+
+	* Added the PostNuke style modversion array into version.php
+
 2001-11-15  Bharat Mediratta  <bharat@menalto.com> (1.2.3-cvs-b7)
 
 	* The following characters can no longer be used in an album name:
